refactorización con Factory, menú de pagos y limpieza de ticket
- Implementado TareaFactory para centralizar la creación de tareas.
- Refactorizado IntegracionCafe usando un Mapa de Slots y Lista de Tareas.
- Añadido menú de consola para seleccionar modo (Con Pago / Sin Pago).
- Añadida verificación de conexión a BD al inicio.
- Integrado XSLT final para generar ticket limpio con stock numérico y total.
- Corregidos logs ruidosos en ConectorStripe y ficheros vacíos en ConectorSalida.